--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_rebuild=clean build
 file.reference.educG-public_html=public_html
 file.reference.educG-test=test
 files.encoding=UTF-8
